Fixed flickering bug when animating the opacity of an element

--- a/css/styles.css
+++ b/css/styles.css
@@ -50,14 +50,6 @@ body {
 	overflow: none;
 }
 
-img {
-    transition: opacity 0.4s ease-out;
-    -ms-transition: opacity 0.4s ease-out;
-    -moz-transition: opacity 0.4s ease-out;
-    -webkit-transition: opacity 0.4s ease-out;
-	opacity: 1;
-}
-
 body {min-width:960px; overflow:hidden;}
 body > div {position: absolute; top:0; width:100%; height: 100%}
 #buttons {z-index: 100; width:100%; height:0;}
